fix the question card alignment as center

--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -177,13 +177,6 @@
             background-clip: text;
 }
 
-/* .css-4t3x6l-MuiPaper-root-MuiDrawer-paper{
-  background: rgba(255, 255, 255, 0.2);   
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.11);
-} */
 
 .css-4t3x6l-MuiPaper-root-MuiDrawer-paper {
   background-color: transparent !important;
@@ -306,6 +299,8 @@
 
     .outer-div{
       width: 100%;
+      display: flex;
+      justify-content: center;
     }
 
     .questionCard{
